# qemu-semihost

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  hello.c  qemu.sh  test.sh  toolchain.sh
qemu-counter/: .gitmodules
qemu-counter/hw/arm/: Makefile.objs  read_counter.c
